typescript/checker/tests/conformance/controlFlow/controlFlowBinaryAndExpression.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            5,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/controlFlow/controlFlowBinaryAndExpression.ts:1:5
  |
1 | let x: string | number | boolean;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            38,
        ),
        hi: BytePos(
            42,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/controlFlow/controlFlowBinaryAndExpression.ts:2:5
  |
2 | let cond: boolean;
  |     ^^^^

